<resources>
    <string name="app_name">MyDompetku</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="text_nominal">0</string>
    <string name="save">SAVE</string>
    <string name="jumlah">Jumlah</string>
    <string name="belum_lunas">Belum Lunas</string>
    <string name="text_debt_loan">1 transaksi</string>

    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_debt">Debt</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="debt_loan_category">Debt &amp; Loan</string>
    <string name="expense_category">Expense</string>
    <string name="income_category">Income</string>
    <string name="debt_category">Debt</string>
    <string name="loan_category">Loan</string>
    <string name="menu_export">Export</string>
    <string name="menu_calendar">Calendar</string>

    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_activity_detail_cashflow">DetailCashflowActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>