<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    app:cardBackgroundColor="#F4F4F4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date_cashflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/date/mmddyy" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_cashflow" />

        <ImageView
            android:id="@+id/iv_icon_cashflow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="#F4F4F4"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv_category_cashflow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/tv_nominal_cashflow"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_cashflow"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_cashflow"
            tools:text="@string/text_primary" />

        <TextView
            android:id="@+id/tv_note_cashflow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#48424b"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_cashflow"
            app:layout_constraintEnd_toStartOf="@+id/tv_nominal_cashflow"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_cashflow"
            tools:text="@string/text_subtitle" />

        <TextView
            android:id="@+id/tv_nominal_cashflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_cashflow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_cashflow"
            tools:text="@string/text_nominal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>