<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#48424b"
            android:text="@string/income_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nominal_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="@+id/income"
            app:layout_constraintTop_toBottomOf="@+id/income"
            tools:text="@string/text_nominal" />


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_income"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nominal_income"
            app:layout_constraintTop_toBottomOf="@+id/nominal_income" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorTextTertiary"
            app:layout_constraintTop_toBottomOf="@+id/pie_chart_income" />


        <TextView
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/expense_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#48424b"
            app:layout_constraintStart_toStartOf="@+id/nominal_income"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/nominal_expanse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintStart_toStartOf="@+id/expense"
            app:layout_constraintTop_toBottomOf="@+id/expense"
            tools:text="@string/text_nominal" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_expanse"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nominal_expanse" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorTextTertiary"
            app:layout_constraintTop_toBottomOf="@+id/pie_chart_expanse" />

        <TextView
            android:id="@+id/debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/debt_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#48424b"
            app:layout_constraintStart_toStartOf="@+id/pie_chart_expanse"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/nominal_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/debt"
            app:layout_constraintTop_toBottomOf="@+id/debt"
            tools:text="@string/text_nominal" />

        <TextView
            android:id="@+id/loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loan_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#48424b"
            app:layout_constraintEnd_toEndOf="@+id/pie_chart_expanse"
            app:layout_constraintStart_toEndOf="@+id/debt"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/nominal_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/loan"
            app:layout_constraintTop_toBottomOf="@+id/loan"
            tools:text="@string/text_nominal" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:background="@color/colorTextTertiary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nominal_debt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>